# fastapi-cbv

./: Makefile  README.md  pyproject.toml
fastapi_cbv/: __init__.py  class_based_view.py  http_methods.py
